vlib/v/checker/tests/orm_wrong_where_expr_error.vv
import db.sqlite

struct User {
	id int @[primary; sql: serial]
}

fn main() {
	mut db := sqlite.connect(':memory:') or { panic(err) }

	sql db {
		create table User
	}!

	users := sql db {
		select from User where 3
	}!

	println(users)
}
